<resources>
    <string name="app_name" translatable="false">社区健康管理（CHMS）</string>
    <string name="hello_world" translatable="false">Hello World!</string>

    <!--登录相关文案-->
    <string name="login_dialog_title" translatable="false">登录</string>
    <string name="login_dialog_subtitle" translatable="false">请登录你的账户</string>
    <string name="tv_email_login" translatable="false">你的邮箱：</string>
    <string name="edt_email_hint_login" translatable="false">请输入账户邮箱</string>
    <string name="tv_password_login" translatable="false">你的密码：</string>
    <string name="edt_password_hint_login" translatable="false">请输入账户密码</string>
    <string name="tv_forget" translatable="false">忘记密码？</string>
    <string name="tv_have_not_account" translatable="false">我还没有账户</string>
    <string name="btn_login_login" translatable="false">登录</string>

    <!--注册相关文案-->
    <string name="register_dialog_title" translatable="false">注册</string>
    <string name="register_dialog_subtitle" translatable="false">创建你自己的账户</string>
    <string name="tv_email_register" translatable="false">邮箱*：</string>
    <string name="edt_email_hint_register" translatable="false">账户邮箱</string>
    <string name="tv_password_register" translatable="false">密码*：</string>
    <string name="edt_password_hint_register" translatable="false">账户密码</string>
    <string name="tv_password_confirm_register" translatable="false">密码确认*：</string>
    <string name="edt_password_confirm_hint_register" translatable="false">密码确认</string>
    <string name="tv_have_account" translatable="false">我已经拥有了账户</string>
    <string name="btn_login_next_step" translatable="false">下一步</string>

    <string name="tv_register_name" translatable="false">用户名称(选填)</string>
    <string name="tv_register_phone" translatable="false">手机号(选填)</string>
    <string name="tv_register_role" translatable="false">请选择你的角色*</string>
    <string name="btn_register_previous_step" translatable="false">上一步</string>
    <string name="btn_login_register" translatable="false">注册</string>

    <!--忘记密码相关的文案-->
    <string name="forget_pwd_title" translatable="false">忘记密码</string>
    <string name="forget_pwd_content" translatable="false">我们将通过给您发送验证码来重置密码。</string>
    <string name="forget_pwd_email" translatable="false">请输入账户邮箱</string>
    <string name="forget_pwd_new" translatable="false">请输入新的密码</string>
    <string name="forget_pwd_confirm" translatable="false">请确认密码</string>
    <string name="forget_pwd_btn_reset" translatable="false">重置密码</string>

    <!--验证码相关文案-->
    <string name="tv_code_register" translatable="false">验证码*：</string>
    <string name="edt_code_hint_register" translatable="false">验证码</string>
    <string name="tv_send_code" translatable="false">发送验证码</string>

    <!--导航文案-->
    <string name="title_home" translatable="false">首页</string>
    <string name="title_report" translatable="false">报告</string>
    <string name="title_knowledge" translatable="false">知识</string>
    <string name="title_mine" translatable="false">我的</string>

    <!--设备相关文案-->
    <string name="manage_devices" translatable="false">设备管理</string>
    <string name="heart_rate_device" translatable="false">心率仪</string>
    <string name="wristband" translatable="false">手环</string>
    <string name="thermometer" translatable="false">温度计</string>
    <string name="body_fat_scale" translatable="false">体脂秤</string>
    <string name="oximeter" translatable="false">血氧仪</string>
    <string name="sphygmomanometer" translatable="false">血压计</string>
    <string name="blood_glucose_meter" translatable="false">血糖仪</string>
    <string name="height_meter" translatable="false">身高测定仪</string>
    <string name="watch" translatable="false">手表/环</string>
    <string name="bloodGlucoseMeter" translatable="false">血糖仪</string>

    <!--统计/报告相关文案-->
    <string name="daily" translatable="false">日报</string>
    <string name="monthly" translatable="false">月报</string>

    <!--用户信息编辑界面相关文案-->
    <string name="user_edit_title" translatable="false">用户信息编辑</string>

    <!--图片信息-->
    <string name="user_avatar" translatable="false">用户头像</string>
    <string name="user_edit_name" translatable="false">用户名</string>
    <string name="user_edit_age" translatable="false">年龄（岁）</string>
    <string name="user_edit_gender" translatable="false">性别</string>
    <string name="user_edit_email" translatable="false">邮箱</string>
    <string name="user_edit_phone" translatable="false">电话号码</string>
    <string name="user_edit_weight" translatable="false">体重（kg）</string>
    <string name="user_edit_height" translatable="false">身高（cm）</string>
    <string name="user_edit_role" translatable="false">角色</string>


    <!--医生模块相关文案-->
    <string name="doctor_describe" translatable="false">医生编号为12345，姓名为张三。他是一名男性，出生于1980年01月01日。
张医生的联系电话是123-456-7890，电子邮箱为zhangsan@example.com。
他专攻于内科，在和谐社区工作，地址是和平路123号。
该医生的信息创建于2020年05月01日，最近一次更新是2021年06月01日。</string>
    
    <string name="report" translatable="false">根据用户提供的健康信息，可以得出以下分析和健康建议：\n\n1. 心率和血压：心率（72次/分钟）和血压（120/80 mmHg）均在正常范围内，表明心血管系统健康。建议定期监测心率和血压，以保持心血管健康。\n\n2. 体重和BMI：用户的体重为70.5公斤，BMI为22.5，表明体重处于正常范围。继续保持均衡饮食和适度运动是保持健康体重的关键。\n\n3. 运动和活动量：每天步数10000步和运动时长60分钟都非常理想，并有助于提高整体健康水平。建议继续保持这种积极生活方式，可以考虑增加一些力量训练，以增强肌肉和骨骼健康。\n\n4. 睡眠质量：睡眠时长为480分钟（8小时），属于良好水平。良好的睡眠对恢复身体和心理状态至关重要，建议维持这一规律。\n\n5. 饮食和营养：卡路里摄入为2000大卡，如果能确保摄入的食物多样化和富含营养（如水果、蔬菜、全谷物和优质蛋白质），将有助于整体健康。可考虑咨询营养师，进一步优化饮食结构。\n\n6. 水分摄入：水摄入量为2000毫升，基本符合每日所需，建议继续这一习惯。确保充足的水分可以帮助维持身体的新陈代谢和健康。\n\n7. 情绪状态和压力管理：情绪状态为放松，压力水平为中等，建议继续进行放松和减压活动，如冥想、瑜伽或适度的休闲活动，以进一步提升心理健康。\n\n8. 氧气饱和度：动脉血氧水平为98.5%，非常理想；而静脉血氧水平为75.0%，相对较低，建议保持适度活动以促进血液循环，必要时咨询医生进一步评估。\n\n总的来说，用户的健康状况良好，维持现有的健康生活方式，同时在饮食和压力管理上做进一步优化，将有助于持续保持良好的健康水平。</string>


    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>