<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.chms_android.features.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.chms_android.features.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report"/>

    <fragment
        android:id="@+id/nav_knowledge"
        android:name="com.example.chms_android.features.knowledge.KnowledgeFragment"
        android:label="@string/title_knowledge"
        tools:layout="@layout/fragment_knowledge"/>

    <fragment
        android:id="@+id/nav_mine"
        android:name="com.example.chms_android.features.mine.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine"/>

</navigation>