<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <!-- 顶部的拖动条 -->
    <View
        android:id="@+id/drag_handle"
        android:layout_width="60dp"
        android:layout_height="4dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_drag_handle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_horizontal_margin"
            android:layout_marginTop="30dp"
            android:text="@string/register_dialog_title"
            style="@style/loginTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_horizontal_margin"
            android:layout_marginTop="10dp"
            android:text="@string/register_dialog_subtitle"
            style="@style/loginContent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_horizontal_margin"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_email_register"
                style="@style/loginNormalText"/>

            <EditText
                android:id="@+id/edt_dbl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/baseline_mail_24"
                android:drawablePadding="5dp"
                android:hint="@string/edt_email_hint_register"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext_normal"
                android:paddingStart="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_horizontal_margin"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_password_register"
                style="@style/loginNormalText"/>

            <EditText
                android:id="@+id/edt_dbl_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="5dp"
                android:hint="@string/edt_password_hint_register"
                android:inputType="textPassword"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext_normal"
                android:paddingStart="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_horizontal_margin"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_password_confirm_register"
                android:textSize="@dimen/title_size_16"
                android:textColor="@color/black"
                android:letterSpacing="0.2"/>

            <EditText
                android:id="@+id/edt_dbl_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawableLeft="@drawable/baseline_water_lock_24"
                android:drawablePadding="5dp"
                android:hint="@string/edt_password_confirm_hint_register"
                android:inputType="textPassword"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edittext_normal"
                android:paddingStart="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_horizontal_margin"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_code_register"
                style="@style/loginNormalText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_dbl_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/edt_code_hint_register"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:background="@drawable/bg_edittext_normal"
                    android:paddingStart="15dp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1.5"
                    android:text="@string/tv_send_code"
                    android:textSize="@dimen/title_size_14"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/btn_background_login" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_dbl_not_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/login_horizontal_margin"
            android:layout_marginTop="100dp"
            android:text="@string/tv_have_account"
            style="@style/loginAccountStateText" />

        <Button
            android:id="@+id/btn_dbl_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_login_register"
            style="@style/loginBtnStyle" />

    </LinearLayout>

</RelativeLayout>